// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/gradle-wrapper/artifacts gradlew failed 1`] = `
Array [
  Object {
    "cmd": "<gradlew> wrapper --gradle-version 5.6.4",
    "options": Object {
      "cwd": "/root/project/lib/manager/gradle-wrapper/__fixtures__/testFiles",
      "encoding": "utf-8",
      "env": Object {
        "GRADLE_OPTS": "-Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true -Dorg.gradle.daemon=false -Dorg.gradle.caching=false",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gradle-wrapper/artifacts replaces existing value 1`] = `
Array [
  Object {
    "cmd": "<gradlew> wrapper --gradle-distribution-url https://services.gradle.org/distributions/gradle-6.3-bin.zip",
    "options": Object {
      "cwd": "/root/project/lib/manager/gradle-wrapper/__fixtures__/testFiles",
      "encoding": "utf-8",
      "env": Object {
        "GRADLE_OPTS": "-Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true -Dorg.gradle.daemon=false -Dorg.gradle.caching=false",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;

exports[`manager/gradle-wrapper/artifacts updates distributionSha256Sum 1`] = `
Array [
  Object {
    "cmd": "<gradlew> wrapper --gradle-distribution-url https://services.gradle.org/distributions/gradle-6.3-bin.zip --gradle-distribution-sha256-sum 038794feef1f4745c6347107b6726279d1c824f3fc634b60f86ace1e9fbd1768",
    "options": Object {
      "cwd": "/root/project/lib/manager/gradle-wrapper/__fixtures__/testFiles",
      "encoding": "utf-8",
      "env": Object {
        "GRADLE_OPTS": "-Dorg.gradle.parallel=true -Dorg.gradle.configureondemand=true -Dorg.gradle.daemon=false -Dorg.gradle.caching=false",
        "HOME": "/home/user",
        "HTTPS_PROXY": "https://example.com",
        "HTTP_PROXY": "http://example.com",
        "LANG": "en_US.UTF-8",
        "LC_ALL": "en_US",
        "NO_PROXY": "localhost",
        "PATH": "/tmp/path",
      },
      "maxBuffer": 10485760,
      "timeout": 900000,
    },
  },
]
`;
